# fastmcp-gsuite

./: .coveragerc  .env.devin  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  conftest.py  docker-compose.yml  gmail-api-openapi-spec.yaml  gmail.v1.json  mypy.ini  pyproject.toml
.github/workflows/: publish.yml  test.yml
.serena/: project.yml
docs/: testing-guide.md
openspec/: project.md
openspec/changes/archive/2025-12-21-fix-async-test-warnings/: proposal.md
openspec/changes/archive/2025-12-21-fix-async-test-warnings/specs/testing/: spec.md
openspec/changes/fix-async-test-warnings/: tasks.md
openspec/changes/improve-auth-setup/: proposal.md  tasks.md
openspec/changes/improve-auth-setup/specs/setup-cli/: spec.md
openspec/specs/drive-trash/: spec.md
openspec/specs/gmail-attachments/: spec.md
openspec/specs/gmail-drive-integration/: spec.md
openspec/specs/setup-cli/: spec.md
openspec/specs/testing/: spec.md
scripts/: create_test_account.sh  drive_tools_demo.py  get_refresh_token.py
src/mcp_gsuite/: __init__.py  __version__.py  auth_helper.py  auth_server.py  calendar.py  calendar_tools.py  common.py  drive.py  drive_tools.py  fast_server.py  gauth.py  gmail.py  gmail_drive_tools.py  gmail_tools.py  settings.py  setup_cli.py
tests/: simple_server.py  test_simple_server.py
tests/e2e/: conftest.py  test_gmail_api.py  test_google_auth.py  test_mcp_contacts.py  test_mcp_gdrive.py  test_mcp_gdrive_operations.py  test_mcp_google_suite.py  test_mcp_gsuite.py  test_mcp_server.py  test_mcp_tasks.py
tests/unit/: test_auth_helper.py  test_calendar_tools.py  test_drive_service.py  test_drive_tools.py  test_gauth.py  test_gmail_drive_tools.py  test_gmail_service.py  test_gmail_tools.py  test_setup_cli.py
tests/unit/mocks/: context_mock.py
