[project]
name = "fastmcp-gsuite"
version = "1.1.0"
description = "MCP Server to connect to Google G-Suite"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
 "beautifulsoup4>=4.12.3",
 "google-api-python-client>=2.154.0",
 "httplib2>=0.22.0",
 # "mcp>=1.3.0", # Now included via fastmcp
 "oauth2client==4.1.3",
 "python-dotenv>=1.0.1",
 "pytz>=2024.2",
 "requests>=2.32.3",
 "fastmcp>=2.1.2,<2.2.0",
 "pydantic-settings>=2.8.1,<2.9.0",
 "detect-secrets>=1.5.0",
 "types-httplib2>=0.22.0.20250401",
 "types-pytz>=2025.2.0.20250326",
]
[[project.authors]]
name = "tumf"
email = "tumf@users.noreply.github.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_gsuite"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.15.0",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "pytest-cov>=4.1.0",
    "ruff>=0.11.5",
    "httpx>=0.27.0",
    "google-auth-oauthlib>=1.2.1",
    "pytest-asyncio>=0.23.0",
    "fastmcp-gsuite[e2e]",
    "types-pytz>=2025.2.0.20250326",
]

e2e = [
    "pytest>=8.3.5",
    "google-auth>=2.27.0",
    "google-api-python-client>=2.154.0",
    "google-auth-httplib2>=0.1.1",
    "google-auth-oauthlib>=1.2.1",
    "pytest-asyncio>=0.26.0",
    "chuk-mcp>=0.1.12",
]

[project.optional-dependencies]
dev = [
    "pyright>=1.1.389",
]
e2e = [
    "pytest>=8.3.5",
    "google-auth>=2.27.0",
    "google-api-python-client>=2.154.0",
    "google-auth-httplib2>=0.1.1",
    "google-auth-oauthlib>=1.2.1",
]

[project.scripts]
# mcp-gsuite = "mcp_gsuite:main" # Old entry point
fastmcp-gsuite-fast = "mcp_gsuite.fast_server:mcp.run" # New entry point using fastmcp
fastmcp-gsuite = "mcp_gsuite.fast_server:mcp.run" # Alias for fastmcp implementation
fastmcp-gsuite-setup = "mcp_gsuite.setup_cli:main" # Interactive setup CLI

# Add pytest configuration to include project root in pythonpath
[tool.pytest.ini_options]
pythonpath = [
  "."
]
markers = [
  "e2e: marks tests as end-to-end tests requiring real credentials"
]
testpaths = ["tests"]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"

[tool.uv.sources]
fastmcp-gsuite = { workspace = true }

# Ruff configuration
[tool.ruff]
# Basic settings
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "N", "B", "UP", "RUF", "A"]
ignore = []

# isort compatible settings
[tool.ruff.lint.isort]
known-first-party = ["mcp_gsuite"]

# Black compatible format settings
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false

[tool.mypy]
python_version = "3.13"
warn_return_any = false
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

# 存在しない型スタブによるエラーを無視
[[tool.mypy.overrides]]
module = [
    "googleapiclient.*",
    "oauth2client.*",
    "google_auth_oauthlib.*",
    "httplib2.*",
    "chuk_mcp.*"
]
ignore_missing_imports = true
